overflow fix

--- a/carrusel.css
+++ b/carrusel.css
@@ -8,6 +8,7 @@ body {
     background: #111;
     margin: 0;
     font-family: Arial, sans-serif;
+    overflow: hidden;
 }
 /*Carrusel principal*/
 .carousel {
